--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5' // Add this line
     }
 }
-
-apply plugin: "com.github.dcendents.android-maven"
 
 allprojects {
     repositories {
